[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/util/SpatialLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://sound/sfx_order_v1.ogg" type="AudioStream" id=2]
[ext_resource path="res://game/Activity.gd" type="Script" id=4]
[ext_resource path="res://level/Register.gd" type="Script" id=5]
[ext_resource path="res://assets/register.tscn" type="PackedScene" id=6]

[sub_resource type="Resource" id=1]
script = ExtResource( 4 )
duration = 2.0
outcome_temper_delta = 2.0
displayed_name = "Take order"

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.241728, 0.177857, 0.180513 )

[node name="Register" type="Area"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 1, 0 )
script = ExtResource( 5 )
activity_taking_order = SubResource( 1 )

[node name="Model" parent="." instance=ExtResource( 6 )]
transform = Transform( 1.2, 0, -1.4495e-13, 0, 1.2, 0, 1.4495e-13, 0, 1.2, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="ActivityLocations" type="Spatial" parent="."]

[node name="Position3D" type="Position3D" parent="ActivityLocations"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.13163e-14, -1, 1 )

[node name="OrderSfx" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 0.833333, 0, 4.26326e-14, 0, 0.833333, 0, -4.26326e-14, 0, 0.833333, 0, 0.333333, -0.416667 )
stream = ExtResource( 2 )
unit_db = 12.0
bus = "Effects"

[node name="Togglables" type="Spatial" parent="."]

[node name="SpatialLabel" parent="Togglables" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 4.26326e-14, 0, 1, 0, -4.26326e-14, 0, 1, 0, 0.75, 0 )
